<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GradeTrackr</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="title_activity_add_term">Add Term</string>
    <string name="title_activity_add_course">Add Course</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="title_activity_add_evaluation">Add Evaluation</string>
    <string name="preferences">Preferences</string>
    <string name="pref_colour">Colour Theme</string>
    <string name="pref_colour_summ">Choose a colour theme for your gradebook</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_term">Add Term</string>
    <string name="menu_add_course">Add Course</string>
    <string name="menu_add_evaluation">Add Evaluation</string>
    <string name="menu_add_category">Add Category</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort_date">Sort by Date</string>
    <string name="menu_sort_name">Sort by Name</string>
    <string name="menu_sort_weight">Sort by Weight</string>
    <string name="menu_sort_category">Sort by Category</string>
    <string name="menu_collapse_all">Collapse Evaluations</string>
    <string name="hint_term_title">Term</string>
    <string name="term_to"> - </string>
    <string name="doneAddTerm">Add Term</string>
    <string name="doneEditTerm">Done</string>
    <string name="hint_course_title">Course Name</string>
    <string name="hint_course_code">Course Code</string>
    <string name="hint_course_units">Units</string>
    <string name="hint_notes">Notes and Description</string>
    <string name="doneAddCourse">Add Course</string>
    <string name="doneEditCourse">Done</string>
    <string name="doneEditCat">Edit Category</string>
    <string name="hint_category_title">Category Name</string>
    <string name="hint_category_weight">Weight</string>
    <string name="doneAddCategory">Add Category</string>
    <string name="doneEditCategory">Done</string>
    <string name="hint_evaluation_title">Evaluation Name</string>
    <string name="hint_evaluation_mark">Mark</string>
    <string name="evaluation_outOf"> out of </string>
    <string name="hint_evaluation_outOf">Total</string>
    <string name="hint_evaluation_weight">Weight</string>
    <string name="doneAddEval">Add Evaluation</string>
    <string name="doneEditEval">Done</string>
    <string name="titleTasks">Tasks</string>
    <string name="titleEvaluations">Evaluations</string>
    <string name="titleCourses">Courses</string>
    <string name="titleCategories">Categories</string>
    <string name="titleTerms">Terms</string>
    <string name="courseTitle">Course</string>
    <string name="courseGrade">Grade</string>
    <string name="textTitle">Title</string>
    <string name="textDate">Date</string>
    <string name="textMark">Mark</string>
    <string name="pickDate">Pick a Date</string>
    <string name="pickStartDate">Pick Start Date</string>
    <string name="pickEndDate">Pick End Date</string>
    <string name="catTitle">Category</string>
    <string name="catGrade">Grade</string>
    <string name="noTermAddTerm">Start by adding a term!</string>
    <string name="blueArrow">Blue Arrow</string>
    <string name="noCourseAddCourse">Start by adding a course!</string>
    <string name="noEvalAddEval">Add an evaluation!</string>
    <string name="evalTitle">Evaluation</string>
    <string name="evalGrade">Grade</string>
    <string name="textWeight">Weight</string>
    <string name="textCategory">Category</string>
    <string name="pref_importdb">Import Data</string>
    <string name="pref_exportdb">Export Data</string>
    <string name="pref_importdb_summ">Import Database</string>
    <string name="pref_exportdb_summ">Export Database</string>
    <string name="hint_category_color">Color</string>
    <string name="title_activity_task_list">Task List</string>
    <string name="menu_add_task">Add Task</string>
    <string name="title_activity_add_task">AddTask</string>
    <string name="hint_task_title">Task Title</string>
    <string name="doneAddTask">Add Task</string>
    <string name="doneEditTask">Done</string>
    <string name="menu_tasks">Tasks</string>
    <string name="chooseColor">Pick Colour</string>
    <string name="textCourseCode">Course Code</string>
    <string name="termTitle">Term</string>
    <string name="textAverage">Cumulative Average</string>
    <string name="taskDeadline">Deadline</string>
    <string name="deadlineTime">Deadline Time</string>
    <string name="deadlineDate">Deadline Date</string>
    <string name="textTasks">Tasks</string>
    <string name="search_hint">Evaluations, courses, etc.</string>
    <string name="title_activity_search">Search</string>
    <string name="action_settings">Settings</string>

</resources>