<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_search"
      android:title="@string/menu_search"
      android:icon="@drawable/ic_action_search_holo_light"
      android:showAsAction="ifRoom|collapseActionView"
      android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/addterm"
        android:alphabeticShortcut="a"
        android:numericShortcut="1"
        android:title="@string/menu_add_term"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_add" />
    <item
        android:id="@+id/preferences"
        android:alphabeticShortcut="b"
        android:numericShortcut="2"
        android:title="@string/preferences" />
    
    <item
        android:id="@+id/tasks"
        android:alphabeticShortcut="c"
        android:numericShortcut="3"
        android:title="@string/menu_tasks" />

</menu>