<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical">

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:background="@color/White" android:paddingBottom="10dp"
		android:paddingLeft="25dp" android:paddingRight="25dp"
		android:paddingTop="10dp" android:weightSum="4">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1.5"
			android:orientation="vertical">

			<TextView android:id="@+id/tvCategoriesCourseTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/textTitle" android:textSize="28sp" android:textStyle="bold"/>

			<TextView android:id="@+id/tvCategoriesCourseCode"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/textDate" android:textSize="12sp"/>
		</LinearLayout>

		<TextView android:id="@+id/tvCategoriesCourseMark"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_weight="2.5" android:gravity="right|center_vertical"
			android:text="@string/textMark" android:textSize="26sp" android:textStyle="bold"/>
	</LinearLayout>

	<RelativeLayout android:id="@+id/rCatLayoutLabelCategories"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginBottom="1dip" android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip" android:baselineAligned="true"
		android:gravity="center_horizontal" android:visibility="visible"
		android:paddingLeft="20dp" android:paddingRight="20dp">

		<TextView android:id="@+id/tvCatTitleLabel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" android:layout_gravity="left"
			android:text="@string/catTitle" android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView android:id="@+id/tvCatMarkLabel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_alignParentRight="true" android:layout_gravity="right"
			android:text="@string/catGrade" android:textAppearance="?android:attr/textAppearanceMedium" />
	</RelativeLayout>

	<View android:id="@+id/vCatDivLine" android:layout_width="fill_parent"
		android:layout_height="1dp" android:background="@color/DarkGrey" android:visibility="visible"/>

	<ListView android:id="@+id/lvCategories" android:layout_width="match_parent"
		android:layout_height="match_parent" android:background="@color/White"
		android:divider="@color/LightGrey" android:dividerHeight="@dimen/divheight">
	</ListView>

</LinearLayout>