<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp" >

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_task_title"
        android:inputType="textCapWords"
        android:maxLength="@integer/sixty"
        android:nextFocusDown="@+id/bTaskPickDate" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:id="@+id/rLayoutDeadline"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:weightSum="7" >

        <Button
            android:background="@color/ActionBarBlue"
            android:textColor="@color/White"
            android:id="@+id/bTaskPickDate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="showDatePickerDialog"
            android:text="@string/deadlineDate" />

        <Button
            android:background="@color/ActionBarBlue"
            android:textColor="@color/White"
            android:id="@+id/bTaskPickTime"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="showDatePickerDialog"
            android:text="@string/deadlineTime" />
    </RelativeLayout>

    <Button
        android:background="@color/ActionBarBlue"
        android:textColor="@color/White"
        android:id="@+id/bTaskDone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/doneAddTask" />

</LinearLayout>