<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="100"
        android:orientation="horizontal"
        android:weightSum="4" >

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvCourseTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/textTitle"
                android:textColor="@color/Black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCourseCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textCourseCode"
                android:textColor="@color/Grey"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvCourseMark"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:text="@string/textMark"
            android:textColor="@color/Black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>