<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCoursesTermTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:scrollHorizontally="true"
            android:text="@string/textTitle"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCoursesTermDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="1dp"
            android:text="@string/textDate"
            android:textColor="@color/Grey"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/rLayoutLabelCourses"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:baselineAligned="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/tvTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/courseTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Grey" />

            <TextView
                android:id="@+id/tvMarkLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:text="@string/courseGrade"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Grey" />
        </RelativeLayout>

        <View
            android:id="@+id/vCourseDivLine"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/DeepBlue"
            android:visibility="visible" />

        <ListView
            android:id="@+id/lvCourses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="100"
            android:divider="@drawable/black_white_gradient"
            android:dividerHeight="@dimen/divheight"
            android:headerDividersEnabled="false" >
        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/tvNoCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/noCourseAddCourse"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black"
        android:textSize="20sp" />

</RelativeLayout>