<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingRight="25dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4" >
        
        <View
        android:id="@+id/line_Color"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/Grey"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp">        
        </View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvCategoryTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textTitle"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCategoryWeight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textWeight"
                android:textColor="@color/Grey"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvCategoryMark"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:text="@string/textMark"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>